Fix - hide overflow on body to prevent scrolling

--- a/editor/css/style.css
+++ b/editor/css/style.css
@@ -1,6 +1,7 @@
 html, body {
     margin: auto;
     padding: 0;
+    overflow: hidden;
 
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
     font-size: 1em;
